# AUTODS_

./: Evaluation_agent.py  README.md  README_DataCleaningAgent.md  _example_data_temp.csv  _test_smoke.csv  adult.csv  agaricus-lepiota.csv  autods_app.py  autods_complete_pipeline.py  autods_implementation_guide.py  autods_pipeline.py  car_insurance_premium_testing.csv  car_insurance_premium_validation.csv  create_example_data.py  data_cleaning_agent.py  data_understanding_agent.py  evaluation.py  feature_engineering_agent.py  fix_langchain_auto.py  generate_report_json.py  modelling_agent.py  multi_agent_report_generator.py  multi_agent_report_generator_standalone.py  pipeline_consistency_validator.py  pipeline_report_input.json  planner_agent.py  pyproject.toml  rental_testing.csv  rental_training.csv  rental_validation.csv  requirements.txt  run.py  streamlit_app.py  utils.py  verification_agent.py
autods_pipeline_output/00_planning/: initial_plan.json  modelling_review.json  replan_after_understanding.json
autods_pipeline_output/01_understanding/: data_profile.json  data_quality_report.json  data_understanding_metadata.json  data_understanding_summary.json  target_analysis.json
autods_pipeline_output/02_cleaning/: cleaned_data.csv  cleaning_report.json
autods_pipeline_output/03_feature_engineering/: X_engineered.csv  X_test.csv  X_train.csv  feature_metadata.json  feature_summary.json  llm_plan.json  preprocessor.joblib  y.csv  y_test.csv  y_train.csv
outputs/: cleaned_data.csv  cleaning_report.json
reports/: report.json  report.md
(+43 files in other folders)
